--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "Trupay backend Project",
   "main": "app.js",
+  "type": "module",
   "scripts": {
-    "start" : "node app.js",
-    "dev": "nodemon app.js"
+    "start" : "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords" : [
     "nodejs",
