Add unit test for sum function and configure Jest in package.json

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest"
   },
   "keywords": [
     "nodejs",
@@ -17,6 +18,7 @@
   "author": "JusttNZ",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^29.7.0",
     "nodemon": "^3.1.9"
   },
   "dependencies": {
