--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,7 +18,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
+    "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^7.1.3",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
