--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.4.1",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.20",
+    "framer-motion": "^12.12.1",
     "postcss": "^8.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
